<resources>
    <string name="app_name">Quiniela</string>
    <string name="et_correo">Correo</string>
    <string name="et_clave">Contraseña</string>
    <string name="nologin">Usuario/Contraseña no valida</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nombreLugar">Equipo Local</string>
    <string name="correoLugar">Marcador 1</string>
    <string name="telefonoLugar">Equipo Visita</string>
    <string name="webLugar">Marcador 2</string>
    <string name="btAddLugar">Agregar Marcador</string>

    <string name="ms_AddLugar">Marcador Agregado con Éxito</string>
    <string name="ms_UpdateLugar">Marcador Modificado con Éxito</string>
    <string name="ms_DeleteLugar">Marcador Eliminado con Éxito</string>
    <string name="ms_FaltaValores">Faltan Valores</string>

    <string name="bt_update_lugar">Actualizar Marcador</string>
    <string name="bt_delete_lugar">Eliminar Marcador</string>

    <!-- Quiniela Strings -->
    <string name="equipo1">Equipo Local</string>
    <string name="marcador1">Marcador 1</string>
    <string name="equipo2">Equipo Visita</string>
    <string name="marcador2">Marcador 2</string>
    <string name="btAddMarcador">Agregar Marcador</string>

    <string name="ms_AddMarcador">Marcador Agregado con Éxito</string>
    <string name="ms_UpdateMarcador">Marcador Modificado con Éxito</string>
    <string name="ms_DeleteMarcador">Marcador Eliminado con Éxito</string>

    <string name="bt_update_marcador">Actualizar Marcador</string>
    <string name="bt_delete_marcador">Eliminar Marcador</string>

</resources>