<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.home.UpdateMarcadorFragment">

    <EditText
        android:id="@+id/et_equipo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/equipo1"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_marcador1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marcador1"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_equipo2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/equipo2"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_marcador2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/marcador2"
        android:inputType="text" />

    <Button
        android:id="@+id/bt_update_marcador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_update_marcador" />

    <Button
        android:id="@+id/bt_delete_marcador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_marcador" />

</LinearLayout>